# psychologicalHelpWebsite

./: .gitignore  env_main.py  main.py  pyproject.toml  requirements.txt  run.py  swagger.yaml
app/: __init__.py  config.py  models.py
psychohelp/: main.py
psychohelp/config/: __init__.py  database.py
psychohelp/models/: appointments_model.py  reviews_model.py  roles.py  roles_model.py  therapists.py  therapists_model.py  users.py
psychohelp/repositories/: __init__.py  appointment_repo.py  appointments.py  helpers.py  review_repo.py  reviews.py  roles.py  roles_repo.py  therapist_repo.py  therapists.py  users.py  users_repo.py
psychohelp/routes/: __init__.py  routes.py
psychohelp/schemas/: appointment_schema.py  appointments.py  reviews.py  roles_schema.py  therapist_schema.py  therapists.py  users.py  users_schema.py
psychohelp/services/: appointment_service.py  appointments.py  review_service.py  reviews.py  roles.py  roles_service.py  therapists.py  therapists_service.py  users.py  users_service.py
src/config/: configs.py
src/models/: appointments_model.py  reviews_model.py  roles_model.py  therapists_model.py  user_model.py
src/repositories/: appointment_repo.py  helpers.py  review_repo.py  roles_repo.py  therapist_repo.py  users_repo.py
src/routes/: routes.py
src/schemas/: appointment_schema.py  reviews_schema.py  roles_schema.py  therapist_schema.py  users_schema.py
src/services/: appointment_service.py  auth_service.py  helpers.py  review_service.py  roles_service.py  (+2 more)
tests/: __init__.py  conftest.py  test_appointments.py  test_users.py
(+22 files in other folders)
