[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psychological-help-website"
version = "0.1.0"
description = "Psychological help website"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.0",
    "pyjwt==2.9.0",
    "SQLAlchemy==2.0.35",
    "asyncpg==0.30.0",
    "pydantic[email]",
    "passlib",
    "uvicorn",
    "greenlet"
]

[project.gui-scripts]
start = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
