[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psychological-help-website"
version = "0.1.0"
description = "Psychological help website"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.0",
    "httpx",
    "pytest",
    "anyio",
    "pyjwt==2.9.0",
    "SQLAlchemy==2.0.35",
    "asyncpg==0.30.0",
    "pydantic[email]",
    "pydantic-extra-types",
    "phonenumbers",
    "passlib",
    "uvicorn",
    "greenlet",
    "bcrypt"
]

[project.gui-scripts]
psychohelp = "psychohelp:main.main"

[tool.hatch.build.targets.wheel]
packages = [
    "psychohelp"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "module"
asyncio_mode = "auto"
